# python-shinkansen

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: black.yaml  release.yml  tests.yaml
shinkansen/: __init__.py  blind_id_intersection.py  common.py  jws.py  payins.py  payouts.py  responses.py
tests/: test_shinkansen.py  test_shinkansen_jws.py  test_shinkansen_payins.py  test_shinkansen_payouts.py  test_shinkansen_responses.py
