[tool.poetry]
name = "python-shinkansen"
packages = [
    {include = "shinkansen"}
]
version = "0.3.1"
description = "Python helpers for Shinkansen"
authors = ["Leonardo Soto M. <leo.soto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jwcrypto = "^1.3.1"
cryptography = "^37.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.6.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
