[tool.poetry]
name = "python-shinkansen"
packages = [
    {include = "shinkansen"}
]
version = "0.8.1"
description = "Python helpers for Shinkansen"
authors = ["Leonardo Soto M. <leo.soto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jwcrypto = "^1.4.0"
cryptography = "^44.0.0"
requests = "^2.28.1"
setuptools = "^70.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^24.3.0"
pre-commit = "^2.19.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
